src/objects/RestTimeManagement__c.object
<CustomObject>
    <description>Rest time management</description>
    <fields>
        <fullName>EnteringTimeHM__c</fullName>
        <label>入室時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnteringTime__c</fullName>
        <label>入室</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FromTMUpdatePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From勤怠管理画面フラグー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LateNightRestTime__c</fullName>
        <inlineHelpText>深夜に休憩の時間情報を格納する(時単位）</inlineHelpText>
        <label>深夜休憩時間（分）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutingTimeHM__c</fullName>
        <label>外出時刻</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:10</fullName>
                </value>
                <value>
                    <fullName>00:20</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>00:40</fullName>
                </value>
                <value>
                    <fullName>00:50</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:10</fullName>
                </value>
                <value>
                    <fullName>01:20</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>01:40</fullName>
                </value>
                <value>
                    <fullName>01:50</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:10</fullName>
                </value>
                <value>
                    <fullName>02:20</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>02:40</fullName>
                </value>
                <value>
                    <fullName>02:50</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:10</fullName>
                </value>
                <value>
                    <fullName>03:20</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>03:40</fullName>
                </value>
                <value>
                    <fullName>03:50</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:10</fullName>
                </value>
                <value>
                    <fullName>04:20</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>04:40</fullName>
                </value>
                <value>
                    <fullName>04:50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutingTime__c</fullName>
        <label>外出</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RestMinuteSum__c</fullName>
        <label>休憩分数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkDayCal__c</fullName>
        <formula>WorkTimeInfo__r.WorkDay__c</formula>
        <label>勤怠日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkTimeInfo__c</fullName>
        <label>勤務時間情報</label>
        <referenceTo>TimeManagement__c</referenceTo>
        <relationshipLabel>勤務休憩管理</relationshipLabel>
        <relationshipName>WorkTimeRelation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WorkerRefCal__c</fullName>
        <formula>WorkTimeInfo__r.WorkerRef__c</formula>
        <label>従業員</label>
        <type>Text</type>
    </fields>
    <label>勤務休憩管理</label>
    <nameField>
        <displayFormat>REST_{YYYYMMDD}_{0000000000}</displayFormat>
        <label>勤務休憩管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>